# python-programming-for-beginners-2026-03-16

./: README.md
additional-materials/: creating-a-python-project-with-uv.md  lambda-functions-guide.md
examples/classdemo/: main.py  pyproject.toml
examples/classes/: main.py
examples/comprehensions/: main.py
examples/conditionals/: README.md  main.py  util.py
examples/dictionarydemo/: main.py  pyproject.toml  wc-kiss.py
examples/error-handling/: customers.json  customers.xml  main.py  pyproject.toml  top_customers.json
examples/exceptiondemo/: full.py  main.py  pyproject.toml  resource-guard.py  simple.py
examples/functiondemo/: main.py  math_operations.py  pyproject.toml
examples/hello/: main.py  x.py
examples/hello-uv/: main.py
examples/hello-uv3/: README.md  main.py  pyproject.toml  temperature-converter.py  type-conversion.py
examples/hello2/: listdemo.py
examples/if-demo/: main.py  pyproject.toml
examples/kpi-analysis/: main.py  pyproject.toml
examples/lab13/: main.py  pyproject.toml  string_methods.py
examples/list-tuple-demo/: main.py  pyproject.toml
examples/listdemo/: copy_vs_slice_benchmark.py  main.py  pyproject.toml  sort_demo..py
examples/local-package-demo/wordcount/: pyproject.toml
examples/local-package-demo/wordcount/src/wordcount/: __init__.py
examples/loop-demo/: filter.py  main.py  pyproject.toml
examples/number-guess/: main.py  pyproject.toml
examples/sql2xlsx/: customers.xlsx  main.py  pyproject.toml
examples/streamlitdemo/: main.py  pyproject.toml
examples/tupledemo/: main.py  pyproject.toml
(+16 files in other folders)
