[project]
name = "wordcount"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gabor", email = "gabor.trainer@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
